✨(parser) add federation parser
This extends the original python3-saml parser to allow
federation metadata parser to return all IdPs at once.
This also adds some attributes extraction.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@ envlist = clean,py38,py39,py310,report
 [testenv]
 # install pytest in the virtualenv where commands will be executed
 deps =
-    pytest
-    pytest-cov
+    .[dev]
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
