--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ dev =
     isort==5.10.1
     pycodestyle==2.8.0
     pylint==2.13.9
+    pyOpenSSL==20.0.1
     pytest==7.1.2
     pytest-cov==3.0.0
     tox
