--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ dev =
     bandit==1.7.4
     black==22.3.0
     flake8==4.0.1
+    httpretty==1.1.4
     ipython==8.4.0
     isort==5.10.1
     pycodestyle==2.8.0
@@ -53,6 +54,8 @@ dev =
     pyOpenSSL==20.0.1
     pytest==7.1.2
     pytest-cov==3.0.0
+    pytest-mock==3.7.0
+    signxml==2.9.0
     tox
     wheel==0.37.1
 django =
