--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,25 @@
 [tox]
-envlist = clean,py38,py39,py310,report
+envlist =
+    clean
+    py3{8,9,10}-core
+    py3{8,9,10}-django32
+    py3{8,9,10}-django40
+    report
 
 [testenv]
-# install pytest in the virtualenv where commands will be executed
 deps =
-    .[dev]
+    core: .[dev]
+    django32: django>=3.2,<4.0
+    django40: django>=4.0,<4.1
+    django{32,40}: .[dev,django]
+env =
+    django{32,40}: PYTHONPATH=. DJANGO_SETTINGS_MODULE=tests_django.settings
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    pytest --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
+    py3{8,9,10}-core: pytest --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
+    django{32,40}: pytest tests_django --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
 depends =
-    report: py38,py39,py310
+    report: py3{8,9,10}-core, py3{8,9,10}-django32, py3{8,9,10}-django40
 
 [testenv:report]
 deps = coverage
