--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ where =
     src
 exclude =
     tests
+    tests_django
 
 [options.extras_require]
 dev =
@@ -54,6 +55,10 @@ dev =
     pytest-cov==3.0.0
     tox
     wheel==0.37.1
+django =
+    django>=3.2,<4.1
+    pytest-django
+    social-auth-app-django
 
 
 [bdist_wheel]
@@ -84,6 +89,7 @@ python_files =
     tests.py
 testpaths =
     tests
+pythonpath = . src
 
 [coverage:paths]
 source =
