✨(django) add cached metadata store
This adds a metadata store which takes advantage of the Django cache
integration.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ dev =
     pyOpenSSL==20.0.1
     pytest==7.1.2
     pytest-cov==3.0.0
+    pytest-freezegun==0.4.2
     pytest-mock==3.7.0
     signxml==2.9.0
     tox
