--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,8 @@ jobs:
       - run:
           name: Lint code with pylint
           command: ~/.local/bin/pylint --rcfile=pylintrc src tests tests_django
+          environment:
+            DJANGO_SETTINGS_MODULE: tests_django.settings
       - run:
           name: Lint code with bandit
           command: ~/.local/bin/bandit -c .bandit -qr src
