👷(ci) merge coverage reports
Update the `tox` configuration to ignore the environment.
This allows to  merge the coverage report because having it
for each environment is not useful since Django code is only
covered in Django environment.
We only want to know the code coverage is globally good.

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ depends =
 deps = coverage
 skip_install = true
 commands =
-    coverage report
-    coverage html
+    coverage report --omit='.tox/*'
+    coverage html --omit='.tox/*'
 
 [testenv:clean]
 deps = coverage
