👷(ci) add tests reports
This adds the test reports to the circle CI configuration
to have a better view of the test results.

The tox file is slightly refactored to store the common pytest
arguments in local variables to help improve readability

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,8 @@ jobs:
           command: tox --parallel 3
       - store_artifacts:
           path: htmlcov
+      - store_test_results:
+          path: test-reports
 
 workflows:
   version: 2
