--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,11 @@ envlist =
     report
 
 [testenv]
+# Local "not-tox" variables
+common_pytest_cov_args = --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
+common_pytest_test_reports_args = --junitxml=test-reports{/}junit-{envname}.xml --junit-prefix={envname}
+common_pytest_args = {[testenv]common_pytest_cov_args} {[testenv]common_pytest_test_reports_args}
+# Tox settings
 deps =
     core: .[dev]
     django32: django>=3.2,<4.0
@@ -16,8 +21,8 @@ setenv =
     django{32,40}: DJANGO_SETTINGS_MODULE=tests_django.settings
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    py3{8,9,10}-core: pytest --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
-    django{32,40}: pytest tests_django --cov --cov-append --cov-config=setup.cfg --cov-report term-missing
+    py3{8,9,10}-core: pytest {[testenv]common_pytest_args}
+    django{32,40}: pytest tests_django {[testenv]common_pytest_args}
 depends =
     report: py3{8,9,10}-core, py3{8,9,10}-django32, py3{8,9,10}-django40
 
