👷(ci) remove unnecessary package installation
Only the `tox` package is required to run `tox` it will
install packages itself on each virtual environment.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip-dist
-          path-args: .[dev]
+          path-args: . tox
           pypi-cache: true
           venv-cache: false
           # pip-dependency-file is only used for cache checksum
