🐛(django) do not mix requirements with dev
`pytest` is not required to run the `social_edu_federation`,
it is only required to run the library's tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
       - checkout
       - run:
           name: Install development dependencies
-          command: pip install --user .[dev,django]
+          command: pip install --user .[dev,django,django-dev]
       - run:
           name: Lint code with isort
           command: ~/.local/bin/isort --check-only src tests tests_django
