--- a/setup.cfg
+++ b/setup.cfg
@@ -62,8 +62,9 @@ dev =
     wheel==0.37.1
 django =
     django>=3.2,<4.1
-    pytest-django
     social-auth-app-django
+django-dev =
+    pytest-django
 
 
 [bdist_wheel]
