--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     core: .[dev]
     django32: django>=3.2,<4.0
     django40: django>=4.0,<4.1
-    django{32,40}: .[dev,django]
+    django{32,40}: .[dev,django,django-dev]
 setenv =
     django{32,40}: DJANGO_SETTINGS_MODULE=tests_django.settings
 commands =
