--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,47 @@ jobs:
       - store_test_results:
           path: test-reports
 
+  # Python packaging
+  python-package:
+    docker:
+      - image: cimg/python:3.10
+    steps:
+      - checkout
+      - run:
+          name: Build python package
+          command: python setup.py sdist bdist_wheel
+      # Persist build packages to the workspace
+      - persist_to_workspace:
+          root: .
+          paths:
+            - dist
+      # Store packages as artifacts to download/test them
+      - store_artifacts:
+          path: dist
+
+  # PyPI publishing
+  # Requires:
+  #   * you already registered the package to pypi.org
+  #   * you defined both the TWINE_USERNAME & TWINE_PASSWORD secret
+  #     environment variables in CircleCI UI (with your PyPI credentials)
+  pypi:
+    docker:
+      - image: cimg/python:3.10
+    steps:
+      - checkout
+      # Restore built python packages
+      - attach_workspace:
+          at: .
+      - run:
+          name: List built packages
+          command: ls dist/*
+      - run:
+          name: Install twine
+          command: pip install --user twine
+      - run:
+          name: Upload built packages to PyPI
+          command: ~/.local/bin/twine upload dist/*
+
 workflows:
   version: 2
 
@@ -159,3 +200,24 @@ workflows:
           filters:
             tags:
               only: /.*/
+
+      # Build the python package
+      - python-package:
+          requires:
+            - tests
+          filters:
+            tags:
+              only: /.*/
+
+      # PyPI publication.
+      #
+      # Publish python package to PYPI only if all build, lint and test jobs
+      # succeeded, and it has been tagged with a tag starting with the letter v
+      - pypi:
+          requires:
+            - python-package
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
