📝(packaging) add long description to package
Simply adds the readme file and license to the long description
of the Python package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = social_edu_federation
 description = An SAML backend for python-social-auth dedicated to education federation (RENATER)
+long_description = file: README.md, LICENSE
+long_description_content_type = text/markdown
 version = 0.0.1
 author = Open FUN (France Universite Numerique)
 author_email = fun.dev@fun-mooc.fr
