🐛(packaging) add Django templates to package
We need to include the *.html files to the python package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ requires_python = >=3.9
 install_requires =
     social-auth-app-django>=5.0.0
     social-auth-core[saml]>=4.2.0
+include_package_data = true
 packages = find:
 package_dir =
     =src
