--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ dev =
     bandit==1.7.4
     black==22.3.0
     check-manifest==0.48
+    cryptography==37.0.2
     flake8==4.0.1
     httpretty==1.1.4
     ipython==8.4.0
