--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,12 @@ name = social_edu_federation
 description = An SAML backend for python-social-auth dedicated to education federation (RENATER)
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
-version = 1.0.1
+version = 2.0.0
 author = Open FUN (France Universite Numerique)
 author_email = fun.dev@fun-mooc.fr
 license = MIT
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Education
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
