--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
 envlist =
     clean
-    py3{8,9,10}-core
-    py3{8,9,10}-django32
-    py3{8,9,10}-django40
+    py3{8,9,10,11}-core
+    py3{8,9,10,11}-django32
+    py3{8,9,10,11}-django40
+    py3{8,9,10,11}-django41
+    py3{8,9,10,11}-django42
     report
 
 [testenv]
@@ -16,15 +18,17 @@ deps =
     core: .[dev]
     django32: django>=3.2,<4.0
     django40: django>=4.0,<4.1
-    django{32,40}: .[dev,django,django-dev]
+    django41: django>=4.1,<4.2
+    django42: django>=4.2,<4.3
+    django{32,40,41,42}: .[dev,django,django-dev]
 setenv =
-    django{32,40}: DJANGO_SETTINGS_MODULE=tests_django.settings
+    django{32,40,41,42}: DJANGO_SETTINGS_MODULE=tests_django.settings
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    py3{8,9,10}-core: pytest {[testenv]common_pytest_args}
-    django{32,40}: pytest tests_django {[testenv]common_pytest_args}
+    py3{8,9,10,11}-core: pytest {[testenv]common_pytest_args}
+    django{32,40,41,42}: pytest tests_django {[testenv]common_pytest_args}
 depends =
-    report: py3{8,9,10}-core, py3{8,9,10}-django32, py3{8,9,10}-django40
+    report: py3{8,9,10,11}-core, py3{8,9,10,11}-django32, py3{8,9,10,11}-django40, py3{8,9,10,11}-django41, py3{8,9,10,11}-django42
 
 [testenv:report]
 deps = coverage
